Add `npm run dev` and parcel for frontend skin development
Skin development is a lot easier if you can get out of PHP.
The skin is reduced to a mustache template, LESS template and JS template
and users can stay out of MediaWiki internals for the time being.

Note: This may be a little misleading as while imports in src will
work in parcel they won't work in MediaWiki.

Change-Id: Iaf59c8ada0a1be10d7f72bc0b2c6c80f265bfa16

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"private": true,
 	"scripts": {
+		"dev": "parcel demo.html",
 		"test": "grunt test"
 	},
 	"devDependencies": {
@@ -9,6 +10,9 @@
 		"grunt-contrib-jshint": "1.1.0",
 		"grunt-jsonlint": "1.1.0",
 		"grunt-stylelint": "0.10.1",
+		"mustache": "3.1.0",
+		"parcel-bundler": "1.12.4",
+		"less": "3.10.3",
 		"stylelint-config-wikimedia": "0.5.0"
 	}
 }
