--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"private": true,
 	"scripts": {
-		"start": "parcel dev-scripts/develop.html",
+		"start": "export PORT=8142 && parcel dev-scripts/develop.html",
+		"build": "node dev-scripts/build.js",
 		"test": "grunt test"
 	},
 	"devDependencies": {
@@ -14,6 +15,7 @@
 		"parcel-bundler": "1.12.4",
 		"less": "3.10.3",
 		"node-fetch": "2.6.0",
-		"stylelint-config-wikimedia": "0.5.0"
+		"stylelint-config-wikimedia": "0.5.0",
+		"webshot": "0.18.0"
 	}
 }
