Provide a vector like skin as an example
The tool now allows switching between skins in development mode.

Change-Id: I63579455626106bc01792db5cff0d3fb4589efae

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
 	"scripts": {
-		"start": "export PORT=8142 && parcel dev-scripts/develop.html",
+		"start": "export PORT=8142 && parcel dev-scripts/index.html",
 		"build": "node dev-scripts/build.js",
 		"test": "grunt test"
 	},
