Make sure you start a server during build so you can get a screenshot
Change-Id: I3ad4d8807111360f9ea8334b0d93772be6943c0a

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"private": true,
 	"scripts": {
 		"start": "export PORT=8142 && parcel dev-scripts/index.html",
-		"build": "node dev-scripts/build.js",
+		"build": "npm start & node dev-scripts/build.js",
 		"test": "grunt test"
 	},
 	"devDependencies": {
